[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
   "google-adk>=1.0.0",
   "langchain>=0.3.25",
   "langchain-google-genai>=2.1.4",
   "langchain-groq>=0.3.2",
   "mcp-use>=1.2.13",
   "mcp[cli]>=1.9.1",
]
